--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import './public/styles/index.scss';
+
 $test: column;
 
 .container {
@@ -6,5 +8,7 @@ $test: column;
   display: flex;
   flex-direction: $test;
   height: 100%;
+  font-size: $font-t1;
+  color: $color-z1;
   justify-content: space-between;
 }
