--- a/src/components/NavigationNavBar/index.wxml
+++ b/src/components/NavigationNavBar/index.wxml
@@ -1,3 +1,8 @@
-<view class="container">
-  2222
+<view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{background}};color:{{color}};font-size:{{fontSize}};position:{{fixed&&'fixed'}};transform:translateY({{!show?'-64px':'0'}});">
+	<view class="back" wx:if="{{back}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="navigateBack">
+		<view class="icon-fanhui"></view>
+		<view class="back-home" wx:if="{{showHomeButton}}" style="">首页</view>
+	</view>
+	<view class="title">{{title!='none'?title:''}}</view>
 </view>
+<view class="navigation-bar-holder" wx:if="{{fixed && show}}" style="background:#000;padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;width:750rpx;"></view>
