--- a/src/pages/demo/index.scss
+++ b/src/pages/demo/index.scss
@@ -1,13 +1,7 @@
 @import '../../public/styles/index';
 
 .container {
-  width: 100%;
-  .title {
-    // font-size: $font-t2;
-    color: $color-z2;
-    display: flex;
-    // flex-direction: $test;
-  }
+  height: 200vh;
 
   .num-title {
     color: green;
