--- a/src/components/NavigationBar/index.wxml
+++ b/src/components/NavigationBar/index.wxml
@@ -1,8 +1,8 @@
-<view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{background}};color:{{color}};font-size:{{fontSize}};position:{{fixed&&'fixed'}};transform:translateY({{!show?'-64px':'0'}});">
-	<view class="back {{back}} {{fixed}}" wx:if="{{back}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="navigateBack">
+<view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{navigationBarBackground}};color:{{navigationBarColor}};font-size:{{navigationBarFontSize}};position:{{isNavigationBarFixed && 'fixed'}};transform:translateY({{isNavigateBarShow?'0':'-64px'}});">
+	<view class="back" wx:if="{{isNavigationBarNeedBack}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="navigateBack">
 		<view class="icon-fanhui"></view>
 		<view class="back-home" wx:if="{{showHomeButton}}" style="">首页</view>
 	</view>
-	<view class="title">{{title!='none'?title:''}}</view>
+	<view class="title">{{navigationBarTitle}}</view>
 </view>
-<view class="navigation-bar-holder" wx:if="{{fixed && show}}" style="background:{{placeholderBg}};padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;width:750rpx;"></view>
+<view class="navigation-bar-holder" wx:if="{{isNavigationBarFixed && isNavigateBarShow}}" style="background:{{placeholderBg}};padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;width:750rpx;"></view>
