--- a/src/components/NavigationBar/index.scss
+++ b/src/components/NavigationBar/index.scss
@@ -46,6 +46,7 @@
   background: transparent;
   position: relative;
   z-index: 2;
+  transition: 300ms;
 }
 @font-face {
     font-family: 'iconfont';
