--- a/src/pages/demo/index.wxml
+++ b/src/pages/demo/index.wxml
@@ -7,7 +7,6 @@
     :navigationBarFontSize="navigationBarFontSize"
     :navigationBarColor="navigationBarColor"
     :navigationPlaceholderBg="navigationPlaceholderBg"
-    :handleNavigateBack="handleNavigateBack"
   ></navigation-bar>
   <view>123123</view>
   <view>123123</view>
@@ -24,11 +23,12 @@
   <button @tap="decNum">点我➖</button>
   <button @tap="onAddNumClick">加</button>
   <button @tap="toTestPage">去测试页</button>
+  <button @tap="toggleNavigationBar">切换导航条显隐</button>
   <view>
     <counter1></counter1>
     <counter2></counter2>
   </view>
   <list></list>
   <view>{{testData}}<view>
-  
+  <input style="width:100rpx;height:100rpx;background:#ccc;"></input>
 </view>
