--- a/src/components/NavigationBar/index.wxml
+++ b/src/components/NavigationBar/index.wxml
@@ -1,8 +1,8 @@
-<view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{navigationBarBackground}};color:{{navigationBarColor}};font-size:{{navigationBarFontSize}};position:{{isNavigationBarFixed && 'fixed'}};transform:translateY({{isNavigateBarShow?'0':'-64px'}});">
+<view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{navigationBarBackground}};color:{{navigationBarColor}};font-size:{{navigationBarFontSize}};position:{{isNavigationBarFixed && 'fixed'}};transform:translateY({{isNavigateBarShow?'0':totalHeight}});">
 	<view class="back" wx:if="{{isNavigationBarNeedBack}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="navigateBack">
 		<view class="icon-fanhui"></view>
 		<view class="back-home" wx:if="{{showHomeButton}}" style="">首页</view>
 	</view>
 	<view class="title">{{navigationBarTitle}}</view>
 </view>
-<view class="navigation-bar-holder" style="background:{{placeholderBg}};padding-top:{{paddingTop}}px;height:{{isNavigationBarFixed && isNavigateBarShow ? height : 0}}px;line-height:{{height}}px;width:750rpx;"></view>
+<view class="navigation-bar-holder" style="background:{{placeholderBg}};padding-top:{{paddingTop}}px;height:{{isNavigationBarFixed && isNavigateBarShow ? height : 0}}px;line-height:{{height}}px;width:100%;"></view>
