feat: add navigate demo

--- a/src/components/NavigationBar/index.wxml
+++ b/src/components/NavigationBar/index.wxml
@@ -1,5 +1,5 @@
 <view class="navigation-bar" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;background:{{navigationBarBackground}};color:{{navigationBarColor}};font-size:{{navigationBarFontSize}};position:{{isNavigationBarFixed && 'fixed'}};transform:translateY({{isNavigateBarShow?'0':totalHeight}});">
-	<view class="back" wx:if="{{isNavigationBarNeedBack}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="navigateBack">
+	<view class="back" wx:if="{{isNavigationBarNeedBack}}" style="padding-top:{{paddingTop}}px;height:{{height}}px;line-height:{{height}}px;" bind:tap="handleNavigate">
 		<view class="icon-fanhui"></view>
 		<view class="back-home" wx:if="{{showHomeButton}}" style="">首页</view>
 	</view>
