feat: optimize back icon

--- a/src/components/NavigationBar/index.scss
+++ b/src/components/NavigationBar/index.scss
@@ -33,7 +33,7 @@
   font-size: 30rpx;
 }
 .title{
-  font-weight: bold;
+  // font-weight: bold;
 }
 .navigation-bar-holder{
   background: transparent;
