feat: add toast demo

--- a/src/pages/demo/index.wxml
+++ b/src/pages/demo/index.wxml
@@ -24,6 +24,7 @@
   <button @tap="onAddNumClick">加</button>
   <button @tap="toTestPage">去测试页</button>
   <button @tap="toggleNavigationBar">切换导航条显隐</button>
+  <button @tap="showToast">显示toast</button>
   <view>
     <counter1></counter1>
     <counter2></counter2>
@@ -31,4 +32,5 @@
   <list></list>
   <view>{{testData}}<view>
   <input style="width:100rpx;height:100rpx;background:#ccc;"></input>
+  <toast></toast>
 </view>
