--- a/src/pages/demo/index.wxml
+++ b/src/pages/demo/index.wxml
@@ -21,6 +21,7 @@
   <button @tap="toTestPage">去测试页</button>
   <button @tap="toggleNavigationBar">切换导航条显隐</button>
   <button @tap="showToast">显示toast</button>
+  <button @tap="showBasicToast">显示自带toast</button>
   <view>
     <counter1></counter1>
     <counter2></counter2>
